# social-video-crawl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chrome.py  docker-compose.yml  install_chrome_139.sh  main.py  nginx.conf  pyproject.toml  requirements.txt  social_video_downloader.py  test_docker.py
src/: api.py  social_video_downloader.py  worker.py
