[project]
name = "social-video-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "selenium-stealth>=1.0.6",
    "seleniumbase>=4.41.4",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
