[project]
name = "social-video-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hatchet-sdk==1.17.0",
    "fastapi",
    "pydantic",
    "loguru==0.7.3",
    "python-multipart==0.0.6",
    "uvicorn[standard]",
    "yt-dlp>=2025.0.0",
]
